--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-8 col-sm-8 col-md-6">
-          <ul id="textSaved"></ul>
           <form>
             <label for="textContent" id="label" class="form-label">Nome:</label>
             <input type="text" id="textContent" class="form-control" placeholder="Inserisci il tuo nome..." required />
@@ -24,6 +23,7 @@
             <button type="submit" id="submit" class="btn btn-success mt-4 me-4">Submit</button>
             <button type="submit" id="clear" class="btn btn-danger mt-4">Clear</button>
           </div>
+          <ul id="textSaved" class="mt-3"></ul>
         </div>
       </div>
     </div>
