--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="bg-dark">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-8 col-sm-8 col-md-6">
           <form>
-            <label for="textContent" id="label" class="form-label">Nome:</label>
+            <label for="textContent" id="label" class="form-label text-light">Nome:</label>
             <input type="text" id="textContent" class="form-control" placeholder="Inserisci il tuo nome..." required />
           </form>
           <div class="d-flex">
-            <button type="submit" id="submit" class="btn btn-success mt-4 me-4">Submit</button>
-            <button type="submit" id="clear" class="btn btn-danger mt-4">Clear</button>
+            <button type="submit" id="submit" class="btn btn-success mt-4 me-4 border border-solid-2-light">Submit</button>
+            <button type="submit" id="clear" class="btn btn-danger mt-4 border border-solid-2-light">Clear</button>
           </div>
-          <ul id="textSaved" class="mt-3"></ul>
+
+          <ul id="textSaved" class="list-group mt-3"></ul>
         </div>
       </div>
     </div>
