--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
           </div>
 
           <ul id="textSaved" class="list-group mt-3"></ul>
+          <div class="mt-1 d-flex">
+            <label for="timer" class="text-light me-2">Timer: </label>
+            <p id="timer" class="text-light"></p>
+          </div>
         </div>
       </div>
     </div>
