--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="bg-dark">
+  <body class="bg-dark mt-3">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-8 col-sm-8 col-md-6">
