reset timer button

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
           </div>
 
           <ul id="textSaved" class="list-group mt-3"></ul>
-          <div class="mt-1 d-flex">
+          <div class="mt-1 d-flex align-items-center">
             <label for="timer" class="text-light me-2">Timer: </label>
-            <p id="timer" class="text-light"></p>
+            <p id="timer" class="text-light mb-0"></p>
+            <button id="resetTimer" class="btn btn-danger mx-3 border border-solid-2-light">Reset Timer</button>
           </div>
         </div>
       </div>
